Overflow css fixed

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,5 +1,10 @@
 body {
     background-color: #F6F8F9;
+    overflow: hidden;
+}
+
+.App {
+    height: 100vh;
 }
 
 .mt-2 {
@@ -21,9 +26,36 @@ body {
     margin-left: 2em;
 }
 
+.app-bar {
+    height: 3.5em;
+    /* box-shadow: 0 0 0 1px #d4d4d5, 0 2px 4px 0 rgba(34,36,38,.12), 0 2px 10px 0 rgba(34,36,38,.15); */
+}
+
+.board {
+    display: flex;
+    flex: 1 1;
+    height: calc(100% - 42px);
+    width: 100%;
+    overflow: auto;
+    overflow-x: scroll;
+}
+
+.scroll-overflow {
+    height: auto;
+} 
+
+
 .card-header {
     font-size: 1.2em;
     font-weight: 600;
+}
+
+.ui.card > .image {
+    background: none;
+}
+
+.ui.card > .content {
+    border-top: none;
 }
 
 .card-norad {
